# TheFoundationProtocol

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CI_ISSUES_STRATEGY.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEFINITION_OF_DONE.md  DELEGATION_BRIEF.md  Dockerfile  GOVERNANCE_MANIFEST.json  Governance.md  NOSTR_LAUNCH.md  NOTICE  OPEN_SOURCE_READINESS_PLAN.md  README.md  REALISTIC_EXECUTION_PLAN.md  ROADMAP.md  SECURITY.md  SECURITY_FIXES_LOG.md  SECURITY_FIXES_PLAN.md  TESTBED_REPORT.json  TFP_CRITICAL_FIXES_PLAN.md  TFP_FINAL_STATUS.md  TFP_STRATEGIC_ARCHITECTURE_REVIEW.md  TFP_V2_10_FIRST_TIME_USER_UI.md  TFP_V2_4_PROGRESS.md  TFP_V2_5_PROGRESS.md  TFP_V2_7_COMPUTE_AND_SIMULATOR.md  TFP_V2_8_MUTUALISTIC_DEFENSE.md  TFP_VISION_AND_CURRENT_STATE.md  TFP_WORLD_EXCELLENCE_GAP_ANALYSIS.md  backgroupmap.txt  bandit.ini  benchmark_comparative.py  benchmark_download_retrieval.py  benchmark_multinode.py  (+15 more)
.github/: dependabot.yml  (+1 more)
tfp-foundation-protocol/: .pre-commit-config.yaml  Dockerfile.demo  IMPLEMENTATION_SUMMARY.md  TODO.md  docker-compose.observability.yml  pib.db  pyproject.toml  requirements.txt
tfp-foundation-protocol/demo/: index.html  manifest.json  service-worker.js
tfp-foundation-protocol/deploy/: Caddyfile  docker-compose.yml
tfp-foundation-protocol/docs/: KNOWN_LIMITATIONS.md  NOSTR_INTEGRATION.md  PHASE1_AUDIT_REPORT.md  SECURITY.md  memory_budget.csv  porting_guide.md  sdr_pipeline.grc  v2.2-hardening.md  v2.5-implementation-summary.md  v3.0-integration-guide.md  v3.2.1_IDENTITY_RELEASE.md  v3.2_COMPLETE_RELEASE.md  v3.2_PRODUCTION_CHECKLIST.md
tfp-foundation-protocol/docs/archive/: README.md  v2.12-integration-guide.md  v2.5-implementation-summary.md
tfp-foundation-protocol/tests/: conftest.py  test_asymmetric_uplink.py  test_blob_store.py  test_bridge3_economics.py  test_broadcaster.py  test_caliper_adapter.py  test_chunk_registry.py  test_chunk_store.py  test_cid_persistence.py  test_concurrency.py  test_config_validation.py  test_credit_ledger.py  test_credit_replay.py  test_demo_server.py  test_device_auth.py  test_dict_lexicon.py  test_e2e_flow.py  test_feature_flags.py  test_grand_completion.py  test_habp_consensus.py  test_hlt.py  test_hlt_nostr.py  test_input_validation.py  test_integration_real.py  test_ipfs_bridge.py  test_lexicon_delta.py  test_nostr_bridge.py  test_nostr_search_index.py  test_nostr_subscriber.py  test_parallel_upload.py  test_peer_auth.py  test_peer_fallback.py  test_pipeline_integration.py  test_production_hardening.py  test_puf_enclave.py  test_rag_production.py  test_range_requests.py  test_rate_limiter.py  test_rate_limiting.py  test_recipe_pipeline.py  (+14 more)
tfp-foundation-protocol/tfp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tfp-foundation-protocol/tfp_broadcaster/: broadcaster.py
tfp-foundation-protocol/tfp_broadcaster/src/gateway/: __init__.py  scheduler.py
tfp-foundation-protocol/tfp_broadcaster/src/ldm_semantic_mapper/: __init__.py
tfp-foundation-protocol/tfp_broadcaster/src/multicast/: adapter.py  multicast_real.py
tfp-foundation-protocol/tfp_cli/: __init__.py  identity.py  main.py
tfp-foundation-protocol/tfp_client/lib/: otel_tracing.py  rag_search.py  rate_limiter.py
tfp-foundation-protocol/tfp_client/lib/batch/: __init__.py  publisher.py
tfp-foundation-protocol/tfp_client/lib/bridges/: ipfs_bridge.py  nostr_bridge.py  nostr_subscriber.py
tfp-foundation-protocol/tfp_client/lib/cache/: __init__.py  chunk_store.py  content_cache.py
tfp-foundation-protocol/tfp_client/lib/caliper/: adapter.py
tfp-foundation-protocol/tfp_client/lib/compute/: credit_formula.py  task_executor.py  verify_habp.py
tfp-foundation-protocol/tfp_client/lib/core/: tfp_engine.py
tfp-foundation-protocol/tfp_client/lib/credit/: dwcc_calculator.py  hybrid_wallet.py  ledger.py
tfp-foundation-protocol/tfp_client/lib/fountain/: adapter.py  fountain_real.py  raptorq_ffi.py
tfp-foundation-protocol/tfp_client/lib/identity/puf_enclave/: enclave.py
tfp-foundation-protocol/tfp_client/lib/lexicon/: adapter.py  adapter_real.py  dict_lexicon_adapter.py
tfp-foundation-protocol/tfp_client/lib/lexicon/hlt/: __init__.py  delta.py  sync.py  tree.py
tfp-foundation-protocol/tfp_client/lib/metadata/: __init__.py  bloom_filter.py  tag_index.py
tfp-foundation-protocol/tfp_client/lib/ndn/: adapter.py  ndn_real.py
tfp-foundation-protocol/tfp_client/lib/publish/: __init__.py  ingestion.py  mesh_aggregator.py
tfp-foundation-protocol/tfp_client/lib/reconstruction/: __init__.py  template_assembler.py
tfp-foundation-protocol/tfp_client/lib/storage/: pinning_manager.py
tfp-foundation-protocol/tfp_client/lib/upload/: __init__.py  chunk_encoder.py  chunk_uploader.py  retry_handler.py
tfp-foundation-protocol/tfp_client/lib/zkp/: adapter.py  zkp_real.py
tfp-foundation-protocol/tfp_common/assets/chunk_index/: __init__.py  categories.py  registry.py
tfp-foundation-protocol/tfp_common/sync/lexicon_delta/: hlt.py
tfp-foundation-protocol/tfp_demo/: __init__.py  config_validation.py  database.py  server.py
tfp-foundation-protocol/tfp_simulator/: README.md  attack_inject.py  ns3_tfp_sim.cc  run_sim.sh
(+126 files in other folders)
