[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfp"
version = "3.1.1"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-ndn",
    "websockets",
    "prometheus_client",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "fakeredis",
    "locust",
]
dev = [
    "black",
    "ruff",
    "mypy",
]
# Heavy optional backends — not needed for the core demo node
distributed = [
    "redis>=5.2.0",
]
rag = [
    "chromadb>=0.4.24",
    "transformers>=4.39.0",
]
tracing = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
]
all = [
    "tfp[distributed,rag,tracing]",
]

[project.scripts]
tfp = "tfp_cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
markers = [
    "concurrency: tests that exercise thread-safety and concurrent access patterns",
]
