[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfp"
version = "3.1.1"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-ndn>=0.4.0",
    "websockets>=12.0",
    "prometheus_client>=0.20.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "fakeredis>=2.2.0",
    "locust>=2.20.0",
    "pytest-timeout>=2.3.0",
]
dev = [
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
# Heavy optional backends — not needed for the core demo node
distributed = [
    "redis>=5.2.0",
]
rag = [
    "chromadb>=0.4.24",
    "transformers>=4.39.0",
]
tracing = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
]
security = [
    "cryptography>=41.0.0",
]
all = [
    "tfp[distributed,rag,tracing,security]",
]

[tool.setuptools.packages.find]
include = ["tfp_*", "demo"]

[project.scripts]
tfp = "tfp_cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
markers = [
    "concurrency: tests that exercise thread-safety and concurrent access patterns",
]
