[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfp"
version = "3.1.1"
description = "The Foundation Protocol - decentralized content and compute protocol for global information access"
readme = "../README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "The Foundation Protocol Contributors", email = "governance@tfp-protocol.org"}
]
keywords = ["decentralized", "content", "compute", "p2p", "nostr", "ipfs", "ndn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/Bittermun/TheFoundationProtocol"
Repository = "https://github.com/Bittermun/TheFoundationProtocol"
Documentation = "https://github.com/Bittermun/TheFoundationProtocol/blob/main/README.md"
"Bug Tracker" = "https://github.com/Bittermun/TheFoundationProtocol/issues"
Changelog = "https://github.com/Bittermun/TheFoundationProtocol/blob/main/CHANGELOG.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-ndn>=0.4.0",
    "websockets>=12.0",
    "prometheus_client>=0.20.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "fakeredis>=2.2.0",
    "locust>=2.20.0",
    "pytest-timeout>=2.3.0",
]
dev = [
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
# Heavy optional backends — not needed for the core demo node
distributed = [
    "redis>=5.2.0",
]
# PostgreSQL for multi-worker deployments (SQLite is single-worker only)
postgresql = [
    "psycopg2-binary>=2.9.0",
]
rag = [
    "chromadb>=0.4.24",
    "transformers>=4.39.0",
]
tracing = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
]
security = [
    "cryptography>=41.0.0",
]
all = [
    "tfp[distributed,postgresql,rag,tracing,security]",
]

[tool.setuptools.packages.find]
include = ["tfp_*", "demo"]

[project.scripts]
tfp = "tfp_cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
markers = [
    "concurrency: tests that exercise thread-safety and concurrent access patterns",
]
